# ratewatch

./: .gitignore  config.yaml  docker-compose.yml  pyproject.toml
ratewatch/: config.py  dependencies.py  main.py
ratewatch/models/: config.py  health.py
ratewatch/routers/: dashboard.py  events.py  health.py  proxy.py
ratewatch/services/: counter.py  proxy.py
static/: dashboard.html
